<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tomer.univacancy.MainActivity">

    <TextView
        android:id="@+id/loginTitle"
        android:text="@string/loginTitle"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="300dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="2dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterEmail"
        android:hint="@string/enterEmail"
        android:inputType="textEmailSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="250dp"
        android:layout_marginRight="130dp"
        android:layout_marginLeft="8dp"

        app:layout_constraintTop_toBottomOf="@id/loginTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


    <TextView
        android:id="@+id/bguMail"
        android:text="@string/bguMail"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"

        app:layout_constraintLeft_toRightOf="@+id/enterEmail"
        app:layout_constraintTop_toTopOf="@+id/enterEmail" />

    <EditText
        android:id="@+id/enter_password"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        app:layout_constraintTop_toBottomOf="@+id/enterEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="150dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"

        app:layout_constraintTop_toBottomOf="@+id/enter_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/notRegistered_text"
        android:text="@string/notRegistered_text"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"

        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/goRegister_button"
        android:text="@string/goRegister_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"

        app:layout_constraintTop_toBottomOf="@+id/notRegistered_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
